[package]
description = "DEPRECATED: use uint instead"
homepage = "http://parity.io"
repository = "https://github.com/ethcore/bigint"
license = "MIT/Apache-2.0"
name = "bigint"
version = "4.4.3"
authors = ["Parity Technologies <admin@parity.io>"]
readme = "README.md"

[dependencies]
rustc-hex = { version = "1.0", optional = true }
heapsize = { version = "0.4", optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
crunchy = "0.1.5"

[dev-dependencies]
quickcheck = "0.4"

[features]
serialize = ["serde", "serde_derive"]
heapsizeof = ["heapsize", "std"]
std = ["rustc-hex"]

[[example]]
name = "modular"
required-features = ["std"]

[badges]
maintenance = { status = "deprecated" }
